--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 asgiref==3.7.2
 Django
-django-cors-headers==4.2.0
+django-cors-headers
 djangorestframework==3.14.0
 gunicorn==21.2.0
 packaging==23.1
