--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ django-cors-headers
 djangorestframework==3.14.0
 gunicorn==21.2.0
 packaging==23.1
+python-dotenv==1.0.0
 pytz==2023.3.post1
 sqlparse==0.4.4
